sharkapp-k8s/sharkapp-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: sharkapp-db
  name: sharkapp-db
  namespace: sharkapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sharkapp-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/sharkapp-k8s-sharkapp-network: "true"
        io.kompose.service: sharkapp-db
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: sharkappdb-secret
                  key: MONGO_PASSWORD
            - name: MONGO_INITDB_ROOT_USERNAME
              valueFrom:
                secretKeyRef:
                  name: sharkappdb-secret
                  key: MONGO_USERNAME
          image: mongo:4.1.8-xenial
          name: sharkapp-db
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: sharkapp-dbdata
      restartPolicy: Always
      volumes:
        - name: sharkapp-dbdata
          persistentVolumeClaim:
            claimName: sharkapp-dbdata
status: {}
