sharkapp-k8s/sharkapp-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: 
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: sharkapp-db
  name: sharkapp-db
  namespace: sharkapp
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    io.kompose.service: sharkapp-db
status:
  loadBalancer: {}
