sharkapp-k8s/sharkapp-k8s-sharkapp-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sharkapp-k8s-sharkapp-network
  namespace: sharkapp
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/sharkapp-k8s-sharkapp-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sharkapp-k8s-sharkapp-network: "true"
